[package]
name = "lazyext-slice"
version = "0.0.1"
edition = "2021"
#repository = "https://github.com/al8n/template-rs"
description = "A placeholder"
license = "MIT/Apache-2.0"

[features]
default = ["full"]
full = ["std", "bytes"]
std = ["alloc"]
alloc = []

[dependencies]
bytes = { version = "1.1", optional = true }
paste = "1"

[dev-dependencies]
criterion = "0.3"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
