[package]
name = "lazyext-slice"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/al8n/lazyext/tree/main/lazyext-slice"
description = "Thousands of utility functions for slices and vec"
license = "MIT/Apache-2.0"
authors = ["Al Liu <scygliu@gmail.com>"]
documentation = "https://docs.rs/lazyext-slice"
keywords = ["utilities", "slice", "vec", "io"]
categories = ["no-std"]

[features]
default = ["full"]
full = ["std", "bytes"]
std = ["alloc"]
alloc = []

[dependencies]
bytes = { version = "1.1", optional = true }
paste = "1"

[dev-dependencies]
criterion = "0.3"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
