[package]
name = "lazyext-sync"
version = "0.0.1"
edition = "2021"
#repository = "https://github.com/al8n/template-rs"
description = "A placeholder"
license = "MIT/Apache-2.0"

[features]
default = ["parking_lot"]

[dependencies]
parking_lot = { version = "0.11", optional = true }

[dev-dependencies]
tokio = {version = "1.15", features = ["full"]}
