[package]
name = "lazyext"
version = "0.0.3"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/al8n/lazyext"
description = "Tons of utility functions for Rust developers"
authors = ["Al Liu <scygliu@gmail.com>"]
documentation = "https://docs.rs/lazyext"
keywords = ["utilities"]

[[bench]]
path = "../benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["full"]
full = ["std"]
std = ["lazyext-slice/std", "lazyext-macros"]
macros = ["lazyext-macros"]

[dependencies]
lazyext-slice = { version = "0.0.2", path = "../lazyext-slice", optional = true }
lazyext-macros = { version = "0.0.1", path = "../lazyext-macros", optional = true }
lazyext-sync = { version = "0.0.1", path = "../lazyext-sync", optional = true }


[dev-dependencies]
criterion = "0.3"
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
